GPencil: Blender crash when file open #102930

Closed
opened 2022-12-03 11:04:03 +01:00 by Mohamed · 17 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: version: 3.4.0 Beta, branch: blender-v3.4-release, commit date: 2022-11-24 16:55, hash: 959f3cd645

Short description of error
As soon as I open attached file Blender crashes. Attached also crash log file.

Exact steps for others to reproduce the error

  • Open attached file
  • Change radius (say 0.6)
  • Save file
  • reopen it (Crash)
    #102930.blend
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: version: 3.4.0 Beta, branch: blender-v3.4-release, commit date: 2022-11-24 16:55, hash: `959f3cd645` **Short description of error** As soon as I open attached file Blender crashes. Attached also crash log file. **Exact steps for others to reproduce the error** - Open attached file - Change radius (say 0.6) - Save file - reopen it (Crash) [#102930.blend](https://archive.blender.org/developer/F14000644/T102930.blend)
Author

Added subscriber: @MumuMundo

Added subscriber: @MumuMundo
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Hi, thanks for the report. I can confirm the crash. Could you share the exact way of recreating the file?

Stack trace:
blender.exe         :0x00007FF62E8F9E90  BKE_curvemap_evaluateF C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.c:970
blender.exe         :0x00007FF62E8FB5F0  BKE_curvemapping_evaluateF C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.c:979
blender.exe         :0x00007FF62F52E050  gpencil_hook_co_apply C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\gpencil_modifiers\intern\MOD_gpencilhook.c:168
blender.exe         :0x00007FF62F52DA90  deformStroke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\gpencil_modifiers\intern\MOD_gpencilhook.c:247
blender.exe         :0x00007FF62E881EB0  BKE_gpencil_modifiers_calc C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_modifier.c:826
blender.exe         :0x00007FF62EA5DAC0  BKE_object_handle_data_update C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.cc:189
blender.exe         :0x00007FF62EA5D920  BKE_object_eval_uber_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.cc:331
blender.exe         :0x00007FF62EC7F720  blender::deg::`anonymous namespace'::evaluate_node C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:108
blender.exe         :0x00007FF62EC7F550  blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:122
blender.exe         :0x00007FF62F8907F0  BLI_task_pool_push C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:471
blender.exe         :0x00007FF62EC7F200  blender::FunctionRef<void __cdecl(blender::deg::OperationNode *)>::callback_fn<`blender::deg::`anon C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:95
blender.exe         :0x00007FF62EC7F7C0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:295
blender.exe         :0x00007FF62EC7F7C0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:302
blender.exe         :0x00007FF62EC7F7C0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:302
blender.exe         :0x00007FF62EC7F7C0  blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:302
blender.exe         :0x00007FF62EC7F960  blender::deg::`anonymous namespace'::schedule_graph C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:287
blender.exe         :0x00007FF62EC7F5C0  blender::deg::`anonymous namespace'::evaluate_graph_threaded_stage C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:320
blender.exe         :0x00007FF62EC7F250  blender::deg::deg_evaluate_on_refresh C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:443
blender.exe         :0x00007FF62E8B66C0  scene_graph_update_tagged C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.cc:2685
blender.exe         :0x00007FF62E7F38F0  wm_event_do_depsgraph C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:449
blender.exe         :0x00007FF62E7DDFD0  wm_file_read_post C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_files.c:741
blender.exe         :0x00007FF62E7DBD50  WM_file_read C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_files.c:989
blender.exe         :0x00007FF62E7DB2B0  wm_open_mainfile__open C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_files.c:2704
blender.exe         :0x00007FF62E7EF810  wm_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1451
blender.exe         :0x00007FF62E7EEEB0  wm_operator_call_internal C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1688
blender.exe         :0x00007FF62E7F1E10  WM_operator_name_call_ptr_with_depends_on_cursor C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1896
blender.exe         :0x00007FF62EB50A20  ui_apply_but_funcs_after C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.cc:1017
blender.exe         :0x00007FF62EB5FE70  ui_popup_handler C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.cc:11507
blender.exe         :0x00007FF62E7EE330  wm_handlers_do_intern C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3222
blender.exe         :0x00007FF62E7ED750  wm_handlers_do C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3342
blender.exe         :0x00007FF62E7F3A60  wm_event_do_handlers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3933
blender.exe         :0x00007FF62E7D9D40  WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:643
blender.exe         :0x00007FF62E7D5320  main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:582
blender.exe         :0x00007FF62F9A36C4  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFFED255540  BaseThreadInitThunk
ntdll.dll           :0x00007FFFEE804830  RtlUserThreadStart```
Hi, thanks for the report. I can confirm the crash. Could you share the exact way of recreating the file? ```lines=10 Stack trace: blender.exe :0x00007FF62E8F9E90 BKE_curvemap_evaluateF C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.c:970 blender.exe :0x00007FF62E8FB5F0 BKE_curvemapping_evaluateF C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.c:979 blender.exe :0x00007FF62F52E050 gpencil_hook_co_apply C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\gpencil_modifiers\intern\MOD_gpencilhook.c:168 blender.exe :0x00007FF62F52DA90 deformStroke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\gpencil_modifiers\intern\MOD_gpencilhook.c:247 blender.exe :0x00007FF62E881EB0 BKE_gpencil_modifiers_calc C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_modifier.c:826 blender.exe :0x00007FF62EA5DAC0 BKE_object_handle_data_update C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.cc:189 blender.exe :0x00007FF62EA5D920 BKE_object_eval_uber_data C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\object_update.cc:331 blender.exe :0x00007FF62EC7F720 blender::deg::`anonymous namespace'::evaluate_node C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:108 blender.exe :0x00007FF62EC7F550 blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:122 blender.exe :0x00007FF62F8907F0 BLI_task_pool_push C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:471 blender.exe :0x00007FF62EC7F200 blender::FunctionRef<void __cdecl(blender::deg::OperationNode *)>::callback_fn<`blender::deg::`anon C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\BLI_function_ref.hh:95 blender.exe :0x00007FF62EC7F7C0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:295 blender.exe :0x00007FF62EC7F7C0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:302 blender.exe :0x00007FF62EC7F7C0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:302 blender.exe :0x00007FF62EC7F7C0 blender::deg::`anonymous namespace'::schedule_children C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:302 blender.exe :0x00007FF62EC7F960 blender::deg::`anonymous namespace'::schedule_graph C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:287 blender.exe :0x00007FF62EC7F5C0 blender::deg::`anonymous namespace'::evaluate_graph_threaded_stage C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:320 blender.exe :0x00007FF62EC7F250 blender::deg::deg_evaluate_on_refresh C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:443 blender.exe :0x00007FF62E8B66C0 scene_graph_update_tagged C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.cc:2685 blender.exe :0x00007FF62E7F38F0 wm_event_do_depsgraph C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:449 blender.exe :0x00007FF62E7DDFD0 wm_file_read_post C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_files.c:741 blender.exe :0x00007FF62E7DBD50 WM_file_read C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_files.c:989 blender.exe :0x00007FF62E7DB2B0 wm_open_mainfile__open C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_files.c:2704 blender.exe :0x00007FF62E7EF810 wm_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1451 blender.exe :0x00007FF62E7EEEB0 wm_operator_call_internal C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1688 blender.exe :0x00007FF62E7F1E10 WM_operator_name_call_ptr_with_depends_on_cursor C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1896 blender.exe :0x00007FF62EB50A20 ui_apply_but_funcs_after C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.cc:1017 blender.exe :0x00007FF62EB5FE70 ui_popup_handler C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.cc:11507 blender.exe :0x00007FF62E7EE330 wm_handlers_do_intern C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3222 blender.exe :0x00007FF62E7ED750 wm_handlers_do C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3342 blender.exe :0x00007FF62E7F3A60 wm_event_do_handlers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3933 blender.exe :0x00007FF62E7D9D40 WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:643 blender.exe :0x00007FF62E7D5320 main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:582 blender.exe :0x00007FF62F9A36C4 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFFED255540 BaseThreadInitThunk ntdll.dll :0x00007FFFEE804830 RtlUserThreadStart```
Author

It's a file with the grease pencil Suzanne. hook modifier and an empty. I don't know how it started crashing.

It's a file with the grease pencil Suzanne. hook modifier and an empty. I don't know how it started crashing.
Member

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Member

Thanks for the update. Not sure whether this is sufficient to investigate the issue.
It seems you've used Curve falloff type in uploaded file. Do you remember exact changes you made in there?
@antoniov , crash happens due to null pointer access at cuma->table. Any idea what could possibly make table as NULL?

Thanks for the update. Not sure whether this is sufficient to investigate the issue. It seems you've used `Curve` falloff type in uploaded file. Do you remember exact changes you made in there? @antoniov , crash happens due to null pointer access at `cuma->table`. Any idea what could possibly make `table` as NULL?
Author

OK I managed to reproduce it and here's a screenshot:
1.jpg

OK I managed to reproduce it and here's a screenshot: ![1.jpg](https://archive.blender.org/developer/F14000355/1.jpg)

@PratikPB2123 I don't remember any change in this area of the code for months...maybe more than a year. I did a debug and yes, it looks the curve->table is NULL, but I could not reproduce with a new file. In theory, the curve is initializated, so I don't see why this curve->table is NULL,

@PratikPB2123 I don't remember any change in this area of the code for months...maybe more than a year. I did a debug and yes, it looks the `curve->table` is `NULL`, but I could not reproduce with a new file. In theory, the curve is initializated, so I don't see why this `curve->table` is NULL,

In #102930#1455357, @MumuMundo wrote:
It's a file with the grease pencil Suzanne. hook modifier and an empty. I don't know how it started crashing.

Are you able to reproduce with any other file?

> In #102930#1455357, @MumuMundo wrote: > It's a file with the grease pencil Suzanne. hook modifier and an empty. I don't know how it started crashing. Are you able to reproduce with any other file?
Author

Yes I posted a screenshot made before closing it and here's the new file.
curve bur reproduce.zip

Yes I posted a screenshot made before closing it and here's the new file. [curve bur reproduce.zip](https://archive.blender.org/developer/F14000593/curve_bur_reproduce.zip)
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

@antoniov I found the way to reproduce the crash from scratch.

Updated the report description.

@antoniov I found the way to reproduce the crash from scratch. Updated the report description.

@PratikPB2123 Yes, I could reproduce it too...but don't found why the table is NULL...it looks something in the write/read code is wrong, but I cannot find it. The modifier is using the standard curve API (not gpencil), so no idea what is going on.

@PratikPB2123 Yes, I could reproduce it too...but don't found why the `table` is NULL...it looks something in the write/read code is wrong, but I cannot find it. The modifier is using the standard curve API (not gpencil), so no idea what is going on.
Philipp Oeser removed the
Interest
Grease Pencil
label 2023-02-09 15:19:08 +01:00
Member

The CurveMapping was just not initialized on file read

Fix is up, see !118525

The CurveMapping was just not initialized on file read Fix is up, see !118525
Member

Apparently this feature is not used that much (havent seen this reported elsewhere), so hesitant to set this to High priority (it is a crash though, so probably should be high priority)

Apparently this feature is not used that much (havent seen this reported elsewhere), so hesitant to set this to High priority (it is a crash though, so probably should be high priority)
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2024-02-20 17:53:31 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-20 18:09:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102930
No description provided.